[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/PermanentMarker-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.572549, 0.682353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="GameOverLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -69.0
margin_right = 256.0
margin_bottom = 69.0
custom_colors/font_color = Color( 0.862745, 0.0823529, 0.0823529, 1 )
custom_fonts/font = SubResource( 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
